SIT issues fixed in signup page.

--- a/app/templates/email/forgotpassword.html
+++ b/app/templates/email/forgotpassword.html
@@ -35,7 +35,7 @@
 
 	<body width="100%">
 		<div width="100%">
-			<div>You have received this email because you have requested to reset the password for your account in {{PRODUCT_NAME}}. If you did not request for resetting your password on {{PRODUCT_NAME}}, simple ignore this email as your account is safe and secure with us which can be accessed by you with your existing password itself. We also request you to notify us such unexpected emails by emailing to {{SUPPORT_EMAIL}}</div>
+			<div>You have received this email because you have requested to reset the password for your account in {{PRODUCT_NAME}}. If you did not request for resetting your password on {{PRODUCT_NAME}}, simple ignore this email as your account is safe and secure with us which can be accessed by you with your existing password itself. We also request you to notify us such unexpected emails by emailing to <a href="mailto:{{SUPPORT_EMAIL}}" target="_top">{{SUPPORT_EMAIL}}</a></div>
 			<div>&nbsp;</div>
 			<div>To reset your password for your account in {{PRODUCT_NAME}}, copy and paste the following URL in your browser and load the page. From there you can set a new password for your account.</div>
 			<div>&nbsp;</div>
