--- a/app/templates/email/welcome.html
+++ b/app/templates/email/welcome.html
@@ -35,7 +35,7 @@
 
 	<body width="100%">
 		<div width="100%">
-			<div>You have received this email because you have signed up with the email address {{CUSTOMER_EMAIL}} on {{PRODUCT_WEBSITE}}. If you did not sign up on {{PRODUCT_WEBSITE}}, kindly notify us by emailing to {{SUPPORT_EMAIL}}</div>
+			<div>You have received this email because you have signed up with the email address <b>{{CUSTOMER_EMAIL}}</b> on {{PRODUCT_WEBSITE}}. If you did not sign up on {{PRODUCT_WEBSITE}}, kindly notify us by emailing to <a href="mailto:{{SUPPORT_EMAIL}}" target="_top">{{SUPPORT_EMAIL}}</a></div>
 			<div>&nbsp;</div>
 			<div>Dear {{FIRST_NAME}} {{LAST_NAME}}, Thank you for joining {{PRODUCT_WEBSITE}}, an efficient and a fastest growing Online Church Management Software.</div>
 			<div>&nbsp;</div>
@@ -46,7 +46,7 @@
 			<div>Logon to {{CS_LOGIN_WEBSITE}} and use your email address ({{CUSTOMER_EMAIL}}) and the password you have set while signing up to get access to your church account</div>
 			<div>&nbsp;</div>
 			<div><b>Have more queries?</b></div>
-			<div>Just send an email to {{SUPPORT_EMAIL}} asking all your queries, we will get back to you within 24 hours and clarify them all!</div>
+			<div>Just send an email to <a href="mailto:{{SUPPORT_EMAIL}}" target="_top">{{SUPPORT_EMAIL}}</a> asking all your queries, we will get back to you within 24 hours and clarify them all!</div>
 		</div>
 	</body>
 </html>
