--- a/app/templates/email/welcome_new.html
+++ b/app/templates/email/welcome_new.html
@@ -1,4 +1,9 @@
+--
 <html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<title>Welcome to {{PRODUCT_NAME}}</title>
+</head>
 <body>
 	<table width="100%" height="100%" border="0" bgcolor="#f1f1f1" cellspacing="0" cellpadding="0">
         <tbody>
@@ -7,56 +12,72 @@
 					<table width="600" border="0" bgcolor="#ffffff" cellspacing="0" cellpadding="0">
 						<tbody>
 							<tr>
-								<td valign="top" bgcolor="#f1f1f1" style="padding-bottom:20px" colspan="3">
-									<!--<a target="_blank" href="http://www.churchstack.com">
-										<img width="450" height="56" border="0" align="left" style="margin:0" alt="ChurchStack" src="../../images/cslogos.png">
-										CHURCHSTACK
-									</a>-->
+								<td valign="top" bgcolor="#f1f1f1" style="padding-bottom:5px;padding-top:5px;" colspan="3"  width="100%">
+									<table width="100%">
+										<tr>
+											<td align="left" width="50%">
+												<a target="_blank" href="{{PRODUCT_WEBSITE}}">
+													<img border="0" align="left" style="margin:0" alt="ChurchStack" src="cid:cs_head_logo">
+												</a>
+											</td>
+											<td align="right" width="50%">
+												<a target="_blank" href="{{PRODUCT_WEBSITE}}">
+													<img border="0" align="right" style="margin:0" alt="ChurchStack" src="cid:cs_site_text_logo">
+												</a>
+											</td>
+										</tr>
+									</table>
 								</td>
 							</tr>
 							<tr>
-								<td valign="top" height="25" colspan="3">
-									<img width="1" height="25" border="0" align="left" alt="ChurchStack" src="../../images/email/vertical_stripe.gif" style="margin:0">
+								<td valign="top" colspan="3">
+									<img width="1" border="0" align="left" alt="ChurchStack" src="cid:cs_vertical_stripe" style="margin:0">
+								</td>
+							</tr>
+							<tr>
+								<td colspan="3" valign="top" style="font-size:10px;font-weight:normal;font-family:Arial,sans-serif;margin:0;margin-bottom:10px;color:grey;padding-bottom:10px;">
+									You have received this email because someone (presumably you) have signed up with the email address {{CUSTOMER_EMAIL}} on {{PRODUCT_NAME}}. If you did not sign up on {{PRODUCT_NAME}}, kindly notify us by emailing to <a href="mailto:{{SUPPORT_EMAIL}}" target="_top">{{SUPPORT_EMAIL}}</a>
 								</td>
 							</tr>
 							<tr>
 								<td width="30" valign="top">
-									<img width="30" height="1" border="0" align="left" alt="Magento" src="../../images/email/horizontal_stripe.gif" style="margin:0">
+									<img width="30" height="1" border="0" align="left" alt="Magento" src="cid:cs_horizontal_stripe" style="margin:0">
 								</td>
 								<td valign="top" align="left" style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555">
 									<h1 style="font-size:28px;font-weight:normal;font-family:Arial,sans-serif;line-height:34px;margin:0;margin-bottom:10px;color:#002d53">
 										Dear {{FIRST_NAME}} {{LAST_NAME}},
 									</h1>
-									<h2 style="font-size:17px;font-weight:bold;font-family:Arial,sans-serif;line-height:23px;margin:0 0 10px 0;color:#e34500">Welcome to {{PRODUCT_WEBSITE}}. We have created your {{PRODUCT_WEBSITE}} account.</h2>
+									<h2 style="font-size:17px;font-weight:bold;font-family:Arial,sans-serif;line-height:23px;margin:0 0 10px 0;color:#e34500">Welcome to {{PRODUCT_NAME}}, an efficient and a fastest growing Online Church Management Software. Your account has been created on {{PRODUCT_NAME}} and is now ready to use.</h2>
 									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
-										You can login to your {{PRODUCT_WEBSITE}} account by clicking the signin button on the top of the churchstack.com site and using the username and password below:
-										<br><br>
-										<b style="color:#000000">E-mail</b>: <a target="_blank" href="mailto:{{CUSTOMER_EMAIL}}">{{CUSTOMER_EMAIL}}</a>
+										You can login to your {{PRODUCT_NAME}} account by clicking the "Signin" button on the top of the <a href="{{PRODUCT_WEBSITE}}" target="_blank">{{PRODUCT_WEBSITE}}</a> site and use the following details:
 										<br>
-										<b style="color:#000000">Password</b>: Your password is the password you created when you registered on the site.
+										<br>
+										<b style="color:#000000">Login URL</b>:{{CS_LOGIN_WEBSITE}}
+										<br>
+										<b style="color:#000000">Email</b>: {{CUSTOMER_EMAIL}}
+										<br>
+										<b style="color:#000000">Password</b>: This is the password you created when you signed up on the website.
 										<br><br>
-										If you forgot your password, you may recover it here: <a target="_blank" style="text-decoration:none;color:#0068b7" href="http://account.churchstack.com/forgotpassword.php">http://account.churchstack.com/forgotpassword.php</a>
+										If you have forgottten your password, you can recover it from here anytime: <a target="_blank" style="text-decoration:none;color:#0068b7" href="{{FORGOT_PASSWORD_URL}}">{{FORGOT_PASSWORD_URL}}</a>
 									</p>
 									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
-										Your Church Details:
+									<b>Your Church Details:</b><BR/>
+									{{CHURCH_NAME}},<BR/>{{CHURCH_ADDRESS}}
 									</p>
-									<ul style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px;padding:0">
-										<li style="list-style:none inside;padding:0 0 0 10px">{{CHURCH_NAME}}<BR>{{CHURCH_ADDRESS}}</li>                                              
-									</ul>
 									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:25px">
 										If you have any questions, please contact us at <a target="_blank" style="text-decoration:none;color:#0068b7" href="mailto:{{SUPPORT_EMAIL}}">{{SUPPORT_EMAIL}}</a>
 									</p>
 								</td>
 								<td width="30" valign="top">
-									<img width="30" height="1" border="0" align="left" alt="Magento" src="../../images/email/horizontal_stripe" style="margin:0">
+									<img width="30" height="1" border="0" align="left" alt="Magento" src="cid:cs_horizontal_stripe" style="margin:0">
 								</td>
 							</tr>
 							<tr>
 								<td bgcolor="#c8c8c8" align="center" style="text-align:center" colspan="3">
-									<p style="font-size:13px;color:#000000;margin:0;padding-top:10px;padding-bottom:10px">
+									<p style="font-size:13px;font-family:Arial,sans-serif;color:#000000;margin:0;padding-top:10px;padding-bottom:10px">
 										Thank you,
 										<br>
-										<b>The {{PRODUCT_WEBSITE}} Team</b>
+										<b>{{PRODUCT_NAME}} Team</b>
 									</p>
 								</td>
 							</tr>
