Email templates modified to new theme

--- a/app/templates/email/forgotpassword.html
+++ b/app/templates/email/forgotpassword.html
@@ -1,47 +1,81 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<style type="text/css">
-			* { margin: 0; padding: 0; }
-			body {background-color :#FFFFFF; background-image :none; font-family: "Trebuchet MS", Helvetica, sans-serif; color:#000000; text-decoration : none; -moz-box-sizing:border-box; box-sizing:border-box; margin: 0px; padding: 3px; }
-			.black-font-10px {font-family: Arial, Helvetica, sans-serif; font-size: 10px; color:#000000; text-decoration : none;}
-			.black-font-14px {font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color:#000000; text-decoration : none;}
-			.black-font-15px {font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color:#000000; text-decoration : none;}
-			.borderless-table { border-collapse: collapse; border: 0; padding: 5px;background-color :#FFFFFF;}
-			.borderless-table-col { border-collapse: collapse; border: 0; padding: 5px;}
-			.borderless-table-gray-bg { border-collapse: collapse; border: 0; padding: 5px; background-color:gray;}
-			.order-summary-table { border-collapse: collapse; border: 1px solid black; padding: 5px;}
-			.order-summary-row { border: 1px solid black; padding: 5px;}
-			.order-summary-left-col { text-align: left; background: #eee;  padding: 5px;}
-			.order-summary-right-col { text-align: left; padding: 5px; border: 1px solid black;}
-			.order-items-table {border-collapse: collapse; width: 100%; margin: 25px 0 0 0; border: 1px solid black; }
-			.order-items-table-header-row { border: 1px solid black; padding: 5px;}
-			.order-items-header-col { border: 1px solid black; padding: 5px; background: #eee; }
-			.order-item-row{ border: 1px solid black; padding: 5px; vertical-align: middle; }
-			.order-item-col{ border: 1px solid black; padding: 5px; vertical-align: middle; }
-			.order-item-subtotal-text { border: 1px solid black; padding: 5px; text-align: left; }
-			.order-item-subtotal-value { border: 1px solid black; padding: 5px; text-align: left; }
-			.order-item-nettotal-text { border: 1px solid black; padding: 5px; text-align: left; background: #eee; font-weight:bold;}
-			.order-item-nettotal-value { border: 1px solid black; padding: 5px; text-align: left; font-weight:bold; background: #eee; }
-			.w10p {width:10%}
-			.w15p {width:15%}
-			.w20p {width:20%}
-			.w30p {width:30%}
-			.w40p {width:40%}
-		</style>
-
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Instructions to reset your password for your account in {{PRODUCT_NAME}}</title>
-	</head>
-
-	<body width="100%">
-		<div width="100%">
-			<div>You have received this email because you have requested to reset the password for your account in {{PRODUCT_NAME}}. If you did not request for resetting your password on {{PRODUCT_NAME}}, simple ignore this email as your account is safe and secure with us which can be accessed by you with your existing password itself. We also request you to notify us such unexpected emails by emailing to <a href="mailto:{{SUPPORT_EMAIL}}" target="_top">{{SUPPORT_EMAIL}}</a></div>
-			<div>&nbsp;</div>
-			<div>To reset your password for your account in {{PRODUCT_NAME}}, copy and paste the following URL in your browser and load the page. From there you can set a new password for your account.</div>
-			<div>&nbsp;</div>
-			<div><a href="{{PASSWORD_RESET_LINK}}" target="_blank">{{PASSWORD_RESET_LINK}}</a></div>
-			<div>&nbsp;</div>
-			<div><b>Note: </b> The above url is valid only for 3 days. After 3 days it will be deactivated for security reasons.</div>
-		</div>
-	</body>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<title>Instructions to reset your password on {{PRODUCT_NAME}}</title>
+</head>
+<body>
+	<table width="100%" height="100%" border="0" bgcolor="#f1f1f1" cellspacing="0" cellpadding="0">
+        <tbody>
+			<tr>
+				<td valign="top" align="center" style="padding:20px 0 20px 0">
+					<table width="600" border="0" bgcolor="#ffffff" cellspacing="0" cellpadding="0">
+						<tbody>
+							<tr>
+								<td valign="top" bgcolor="#f1f1f1" colspan="3"  width="100%">
+									<table width="100%">
+										<tr>
+											<td align="left" width="50%">
+												<a target="_blank" href="{{PRODUCT_WEBSITE}}">
+													<img border="0" align="left" style="margin:0" alt="ChurchStack" src="cid:cs_head_logo">
+												</a>
+											</td>
+											<td align="right" width="50%">
+												<a target="_blank" href="{{PRODUCT_WEBSITE}}">
+													<img border="0" align="right" style="margin:0" alt="ChurchStack" src="cid:cs_site_text_logo">
+												</a>
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+							<tr>
+								<td valign="top" colspan="3">
+									<img width="1" border="0" align="left" alt="ChurchStack" src="cid:cs_vertical_stripe" style="margin:0">
+								</td>
+							</tr>
+							<tr>
+								<td colspan="3" valign="top" style="font-size:10px;font-weight:normal;font-family:Arial,sans-serif;margin:0;margin-bottom:10px;color:grey;padding-bottom:10px;">
+									You have received this email because someone (presumably you) have requested to reset the password for your account in {{PRODUCT_NAME}}. If you did not request for resetting your password on {{PRODUCT_NAME}}, simple ignore this email as your account is safe and secure with us which can be accessed by you with your existing password itself. We also request you to notify us such unexpected emails by emailing to <a href="mailto:{{SUPPORT_EMAIL}}" target="_top" style="text-decoration:none;color:#0068b7">{{SUPPORT_EMAIL}}</a>
+								</td>
+							</tr>
+							<tr>
+								<td width="30" valign="top">
+									<img width="30" height="1" border="0" align="left" alt="Magento" src="cid:cs_horizontal_stripe" style="margin:0">
+								</td>
+								<td valign="top" align="left" style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555">
+									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
+										To reset your password for your account in {{PRODUCT_NAME}}, copy and paste the following URL in your browser and load the page and from there you can set a new password for your account.
+										<br><br>
+										<a href="{{PASSWORD_RESET_LINK}}" target="_blank" style="text-decoration:none;color:#0068b7">{{PASSWORD_RESET_LINK}}</a>
+									</p>
+									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
+									<b>Note: </b> The above url is valid only for 3 days. After 3 days it will be deactivated for security reasons.
+									</p>
+									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:25px">
+										If you have any questions, please contact us at <a target="_blank" style="text-decoration:none;color:#0068b7" href="mailto:{{SUPPORT_EMAIL}}">{{SUPPORT_EMAIL}}</a>
+									</p>
+									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
+									DO NOT reply to this email as this mailbox is not monitored and we cannot reply back to you. Instead, send an email to our support team (to the email mentioned above) with your queries so that we can get back to you with the help at the earliest.
+									</p>
+								</td>
+								<td width="30" valign="top">
+									<img width="30" height="1" border="0" align="left" alt="Magento" src="cid:cs_horizontal_stripe" style="margin:0">
+								</td>
+							</tr>
+							<tr>
+								<td bgcolor="#c8c8c8" align="center" style="text-align:center" colspan="3">
+									<p style="font-size:13px;font-family:Arial,sans-serif;color:#000000;margin:0;padding-top:10px;padding-bottom:10px">
+										Thank you,
+										<br>
+										<b>{{PRODUCT_NAME}} Team</b>
+									</p>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+<body>
 </html>
