--- a/app/templates/email/referralprogram.html
+++ b/app/templates/email/referralprogram.html
@@ -1,61 +1,72 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<style type="text/css">
-			* { margin: 0; padding: 0; }
-			body {background-color :#FFFFFF; background-image :none; font-family: "Trebuchet MS", Helvetica, sans-serif; color:#000000; text-decoration : none; -moz-box-sizing:border-box; box-sizing:border-box; margin: 0px; padding: 3px; }
-			.black-font-10px {font-family: Arial, Helvetica, sans-serif; font-size: 10px; color:#000000; text-decoration : none;}
-			.black-font-14px {font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color:#000000; text-decoration : none;}
-			.black-font-15px {font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color:#000000; text-decoration : none;}
-			.borderless-table { border-collapse: collapse; border: 0; padding: 5px;background-color :#FFFFFF;}
-			.borderless-table-col { border-collapse: collapse; border: 0; padding: 5px;}
-			.borderless-table-gray-bg { border-collapse: collapse; border: 0; padding: 5px; background-color:gray;}
-			.order-summary-table { border-collapse: collapse; border: 1px solid black; padding: 5px;}
-			.order-summary-row { border: 1px solid black; padding: 5px;}
-			.order-summary-left-col { text-align: left; background: #eee;  padding: 5px;}
-			.order-summary-right-col { text-align: left; padding: 5px; border: 1px solid black;}
-			.order-items-table {border-collapse: collapse; width: 100%; margin: 25px 0 0 0; border: 1px solid black; }
-			.order-items-table-header-row { border: 1px solid black; padding: 5px;}
-			.order-items-header-col { border: 1px solid black; padding: 5px; background: #eee; }
-			.order-item-row{ border: 1px solid black; padding: 5px; vertical-align: middle; }
-			.order-item-col{ border: 1px solid black; padding: 5px; vertical-align: middle; }
-			.order-item-subtotal-text { border: 1px solid black; padding: 5px; text-align: left; }
-			.order-item-subtotal-value { border: 1px solid black; padding: 5px; text-align: left; }
-			.order-item-nettotal-text { border: 1px solid black; padding: 5px; text-align: left; background: #eee; font-weight:bold;}
-			.order-item-nettotal-value { border: 1px solid black; padding: 5px; text-align: left; font-weight:bold; background: #eee; }
-			.w10p {width:10%}
-			.w15p {width:15%}
-			.w20p {width:20%}
-			.w30p {width:30%}
-			.w40p {width:40%}
-		</style>
-
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>{{PRODUCT_NAME}} - Referral Program</title>
-	</head>
-
-	<body width="100%">
-		<div width="100%">
-			<div>Welcome to {{PRODUCT_WEBSITE}} , the new generation Church Management Software. You have made a fantastic decision and it is our privilege to have you on board. We want to assure you that {{PRODUCT_WEBSITE}} will be the most affordable ChMS with exciting features and lot more.</div>
-			<div>&nbsp;</div>
-			<div>While we celebrate your partnership with us, we want to reveal to you the most exciting thing about {{PRODUCT_NAME}}, the Referral Program. With our referral program, you will get 30 days of additional validity for every referral you make.</div>
-			<div>&nbsp;</div>
-			<div><b>So, how does this referral program work?</b></div>
-			<div>It's simple and clean. When your referral (the person who heard about {{PRODUCT_NAME}} from you) signs up, tell him to fill up the <b><i>Referrer's Email</i></b> field with your email address (which is, {{CUSTOMER_EMAIL}})</div>
-			<div>&nbsp;</div>
-			<div><b>What is in it for me?</b></div>
-			<div>When the referral makes his first payment after completing the trial, your account's validity will be extended by 30 days absolutely free of cost immediately (and absolutely no waiting time!).</div>
-			<div>&nbsp;</div>
-			<div><b>What is in it for my referral?</b></div>
-			<div>The benefits does not stop just with you, your referral also gets 30 days additional validity once he makes his first payment. Therefore, make sure your referral remembers to give your email address in the "Referrer's Email" field when he signs up!</div>
-			<div>&nbsp;</div>
-			<div><b>Is there any limit on the number of customers that I can refer to {{PRODUCT_WEBSITE}}?</b></div>
-			<div>Absolutely No! You can refer as much people you can and reap the maximum benefits with our referral program. That is, if you refer 12 people to us, you get 12 months free subscription.</div>
-			<div>&nbsp;</div>
-			<div><b>When does this referral program end?</b></div>
-			<div>The referral program ends on 31st March 2015. So hurry and make use of this 'once in a lifetime' opportunity to avail the maximum benefits.</div>
-			<div>&nbsp;</div>
-			<div><b>I have a few more queries in need of clarification!</b></div>
-			<div>Just send an email to <a href="mailto:{{SUPPORT_EMAIL}}" target="_top">{{SUPPORT_EMAIL}}</a> asking all your queries, we will get back to you within 24 hours and clarify them all!</div>
-		</div>
-	</body>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<title>{{PRODUCT_NAME}} - Referral Program</title>
+</head>
+<body>
+	<table width="100%" height="100%" border="0" bgcolor="#f1f1f1" cellspacing="0" cellpadding="0">
+        <tbody>
+			<tr>
+				<td valign="top" align="center" style="padding:20px 0 20px 0">
+					<table width="600" border="0" bgcolor="#ffffff" cellspacing="0" cellpadding="0">
+						<tbody>
+							<tr>
+								<td valign="top" bgcolor="#f1f1f1" colspan="3"  width="100%">
+									<table width="100%">
+										<tr>
+											<td align="left" width="50%">
+												<a target="_blank" href="{{PRODUCT_WEBSITE}}">
+													<img border="0" align="left" style="margin:0" alt="ChurchStack" src="cid:cs_head_logo">
+												</a>
+											</td>
+											<td align="right" width="50%">
+												<a target="_blank" href="{{PRODUCT_WEBSITE}}">
+													<img border="0" align="right" style="margin:0" alt="ChurchStack" src="cid:cs_site_text_logo">
+												</a>
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+							<tr>
+								<td valign="top" colspan="3">
+									<img width="1" border="0" align="left" alt="ChurchStack" src="cid:cs_vertical_stripe" style="margin:0">
+								</td>
+							</tr>
+							<tr>
+								<td width="30" valign="top">
+									<img width="30" height="1" border="0" align="left" alt="Magento" src="cid:cs_horizontal_stripe" style="margin:0">
+								</td>
+								<td valign="top" align="left" style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555">
+									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
+										Welcome to {{PRODUCT_NAME}} , the new generation Church Management Software. You have made a fantastic decision and it is our privilege to have you on board. We want to assure you that {{PRODUCT_NAME}} will be the most affordable ChMS with exciting features and the most rewarding.
+									</p>
+									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
+										While we celebrate your partnership with us, we want to reveal to you the most exciting thing about {{PRODUCT_NAME}}, the Referral Program. With our referral program, you will get 30 days of additional validity for every referral you make.
+									</p>
+									<p><a href="{{REFERRAL_PROGRAM_URL}}" target="_blank" style="font-size:17px;font-weight:bold;font-family:Arial,sans-serif;line-height:23px;margin:0 0 10px 0;color:#e34500"><h3>Click here to know more about {{PRODUCT_NAME}}'s Referral Program</a></h3></p>
+									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:25px">
+										If you have any questions, please contact us at <a target="_blank" style="text-decoration:none;color:#0068b7" href="mailto:{{SUPPORT_EMAIL}}">{{SUPPORT_EMAIL}}</a>
+									</p>
+								</td>
+								<td width="30" valign="top">
+									<img width="30" height="1" border="0" align="left" alt="Magento" src="cid:cs_horizontal_stripe" style="margin:0">
+								</td>
+							</tr>
+							<tr>
+								<td bgcolor="#c8c8c8" align="center" style="text-align:center" colspan="3">
+									<p style="font-size:13px;font-family:Arial,sans-serif;color:#000000;margin:0;padding-top:10px;padding-bottom:10px">
+										Thank you,
+										<br>
+										<b>{{PRODUCT_NAME}} Team</b>
+									</p>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+<body>
 </html>
