--- a/app/templates/email/welcome.html
+++ b/app/templates/email/welcome.html
@@ -11,7 +11,7 @@
 					<table width="600" border="0" bgcolor="#ffffff" cellspacing="0" cellpadding="0">
 						<tbody>
 							<tr>
-								<td valign="top" bgcolor="#f1f1f1" style="padding-bottom:5px;padding-top:5px;" colspan="3"  width="100%">
+								<td valign="top" bgcolor="#f1f1f1" colspan="3"  width="100%">
 									<table width="100%">
 										<tr>
 											<td align="left" width="50%">
@@ -35,7 +35,7 @@
 							</tr>
 							<tr>
 								<td colspan="3" valign="top" style="font-size:10px;font-weight:normal;font-family:Arial,sans-serif;margin:0;margin-bottom:10px;color:grey;padding-bottom:10px;">
-									You have received this email because someone (presumably you) have signed up with the email address {{CUSTOMER_EMAIL}} on {{PRODUCT_NAME}}. If you did not sign up on {{PRODUCT_NAME}}, kindly notify us by emailing to <a href="mailto:{{SUPPORT_EMAIL}}" target="_top">{{SUPPORT_EMAIL}}</a>
+									You have received this email because someone (presumably you) have signed up with the email address {{CUSTOMER_EMAIL}} on {{PRODUCT_NAME}}. If you did not sign up on {{PRODUCT_NAME}}, kindly notify us by emailing to <a href="mailto:{{SUPPORT_EMAIL}}" target="_top" style="text-decoration:none;color:#0068b7">{{SUPPORT_EMAIL}}</a>
 								</td>
 							</tr>
 							<tr>
@@ -48,20 +48,20 @@
 									</h1>
 									<h2 style="font-size:17px;font-weight:bold;font-family:Arial,sans-serif;line-height:23px;margin:0 0 10px 0;color:#e34500">Welcome to {{PRODUCT_NAME}}, an efficient and a fastest growing Online Church Management Software. Your account has been created on {{PRODUCT_NAME}} and is now ready to use.</h2>
 									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
-										You can login to your {{PRODUCT_NAME}} account by clicking the "Signin" button on the top of the <a href="{{PRODUCT_WEBSITE}}" target="_blank">{{PRODUCT_WEBSITE}}</a> site and use the following details:
-										<br>
-										<br>
-										<b style="color:#000000">Login URL</b>:{{CS_LOGIN_WEBSITE}}
-										<br>
-										<b style="color:#000000">Email</b>: {{CUSTOMER_EMAIL}}
-										<br>
-										<b style="color:#000000">Password</b>: This is the password you created when you signed up on the website.
-										<br><br>
-										If you have forgottten your password, you can recover it from here anytime: <a target="_blank" style="text-decoration:none;color:#0068b7" href="{{FORGOT_PASSWORD_URL}}">{{FORGOT_PASSWORD_URL}}</a>
-									</p>
-									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
 									<b>Your Church Details:</b><BR/>
 									{{CHURCH_NAME}},<BR/>{{CHURCH_ADDRESS}}
+									</p>
+									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:10px">
+										You can login to your {{PRODUCT_NAME}} account by clicking the "Signin" button on the top of the <a href="{{PRODUCT_WEBSITE}}" target="_blank" style="text-decoration:none;color:#0068b7">{{PRODUCT_WEBSITE}}</a> site and use the following details:
+										<br>
+										<br>
+										<b>Login URL</b>: <a href="{{CS_LOGIN_WEBSITE}}" target="_blank" style="text-decoration:none;color:#0068b7">{{CS_LOGIN_WEBSITE}}</a>
+										<br>
+										<b>Email</b>: <span style="text-decoration:none;color:#0068b7">{{CUSTOMER_EMAIL}}</span>
+										<br>
+										<b>Password</b>: This is the password you created when you signed up on the website.
+										<br><br>
+										If you have forgottten your password, you can recover it from here anytime: <a target="_blank" style="text-decoration:none;color:#0068b7" href="{{FORGOT_PASSWORD_URL}}">{{FORGOT_PASSWORD_URL}}</a>
 									</p>
 									<p style="font-size:13px;font-family:Arial,sans-serif;line-height:18px;color:#555555;margin:0;margin-bottom:25px">
 										If you have any questions, please contact us at <a target="_blank" style="text-decoration:none;color:#0068b7" href="mailto:{{SUPPORT_EMAIL}}">{{SUPPORT_EMAIL}}</a>
